<resources>
    <string name="app_name">Navigation Drawer Example</string>
    <string name="profile">Profile</string>
    <string name="notification">Notification</string>
    <string name="message">Message</string>
    <string name="settings">Settings</string>
    <string name="about_us">About Us</string>
    <string name="support">Support</string>
    <string name="profileName">Shakila Nur</string>
    <string name="verified">Verified</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
