<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menuProfile"
        android:icon="@drawable/profile"
        android:title="@string/profile"/>

    <item
        android:id="@+id/menuNotification"
        android:icon="@drawable/notification"
        android:title="@string/notification"/>

    <item
        android:id="@+id/menuMessage"
        android:icon="@drawable/mail"
        android:title="@string/message"/>

    <item
        android:id="@+id/menuOrder"
        android:icon="@drawable/mail"
        android:title="@string/message"/>

    <item android:title="@string/settings">

        <menu>

            <item
                android:id="@+id/menuAbout"
                android:icon="@drawable/about"
                android:title="@string/about_us"/>

            <item
                android:id="@+id/menuSettings"
                android:icon="@drawable/settings"
                android:title="@string/settings"/>

            <item
                android:id="@+id/menuSupport"
                android:icon="@drawable/support"
                android:title="@string/support"/>
        </menu>
    </item>

</menu>